# drf_tutorial

./: pyproject.toml
app/config/: settings.py
app/members/: apis.py  serializers.py  tests.py
app/members/migrations/: 0001_initial.py
app/snippets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/snippets/apis/: api_view.py  generic.py  mixins.py  viewsets.py
app/snippets/migrations/: 0001_initial.py  0002_auto_20200222_1225.py
